[package]
name = "async_object"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Async Object wrapper"
repository = "https://github.com/milyin/async-object"
# documentation = ""
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.futures]
version = "0.3.17"
features = ["thread-pool"]
