[package]
name = "async_object_derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Async Object wrapper macros"
repository = "https://github.com/milyin/async-object/tree/main/async_object_derive"
# documentation = ""
readme = "../README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
# async_object = "0.1.0"
async_object = { path = ".." }
proc-macro2 = "1.0"
futures = "0.3"
